@@ -19,6 +19,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
@@ -190,26 +192,166 @@ class AppSeriesServiceTest {
             assertEquals(2.0f, series.getCoverBooks().get(1).getSeriesNumber());
         }
 
-        @Test
-        void getSeries_sortByName_asc() {
+        @ParameterizedTest
+        @CsvSource({
+                "name, asc",
+                "bookCount, desc",
+                "readProgress, asc",
+                "lastReadTime, desc"
+        })
+        void getSeries_sortsByField(String sortField, String sortDir) {
             mockAdminUser();
             mockAggregateQuery(Collections.emptyList());
             mockCountQuery(0L);
 
-            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, "name", "asc", null, null, null);
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, sortField, sortDir, null, null, null);
 
             assertNotNull(result);
         }
 
         @Test
-        void getSeries_sortByBookCount_desc() {
+        void getSeries_notStartedFilter_appliesHavingClauseAndAltCount() {
             mockAdminUser();
-            mockAggregateQuery(Collections.emptyList());
-            mockCountQuery(0L);
+            mockAggregateQueryInProgress(List.of(
+                    mockSeriesTuple("Fresh Series", 4L, 4, Instant.now(), 0L)
+            ));
+            mockCountQueryInProgress(1L);
+            mockBooksQuery(List.of(buildBook(20L, "Fresh Series", 1.0f, "Author A")));
 
-            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, "bookCount", "desc", null, null, null);
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, "not-started");
 
             assertNotNull(result);
+            assertEquals(1, result.getContent().size());
+        }
+
+        @Test
+        void getSeries_completedFilter_appliesHavingClauseAndAltCount() {
+            mockAdminUser();
+            mockAggregateQueryInProgress(List.of(
+                    mockSeriesTuple("Finished Series", 3L, 3, Instant.now(), 3L)
+            ));
+            mockCountQueryInProgress(1L);
+            mockBooksQuery(List.of(buildBook(21L, "Finished Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, "completed");
+
+            assertNotNull(result);
+            assertEquals(1, result.getContent().size());
+        }
+
+        @Test
+        void getSeries_abandonedFilter_appliesHavingClauseAndAltCount() {
+            mockAdminUser();
+            mockAggregateQueryInProgress(List.of(
+                    mockSeriesTuple("Dropped Series", 5L, 5, Instant.now(), 1L)
+            ));
+            mockCountQueryInProgress(1L);
+            mockBooksQuery(List.of(buildBook(22L, "Dropped Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, "abandoned");
+
+            assertNotNull(result);
+            assertEquals(1, result.getContent().size());
+        }
+
+        @Test
+        void getSeries_unrecognizedStatusFilter_normalizesToNoFilter() {
+            mockAdminUser();
+            mockAggregateQuery(List.of(
+                    mockSeriesTuple("Any Series", 2L, 2, Instant.now(), 1L)
+            ));
+            mockCountQuery(1L);
+            mockBooksQuery(List.of(buildBook(23L, "Any Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, "not-a-real-status");
+
+            assertNotNull(result);
+            assertEquals(1, result.getContent().size());
+        }
+
+        @Test
+        void getSeries_seriesStatus_wontRead_whenWontReadCountPositive() {
+            mockAdminUser();
+            Tuple tuple = mockSeriesTupleWithCounts("Won't Read Series", 4L, 4, Instant.now(), 0L, 0L, 0L, 2L);
+            mockAggregateQuery(List.of(tuple));
+            mockCountQuery(1L);
+            mockBooksQuery(List.of(buildBook(30L, "Won't Read Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, null);
+
+            assertEquals("WONT_READ", result.getContent().getFirst().getSeriesStatus());
+        }
+
+        @Test
+        void getSeries_seriesStatus_abandoned_whenAbandonedCountPositive() {
+            mockAdminUser();
+            Tuple tuple = mockSeriesTupleWithCounts("Abandoned Series", 4L, 4, Instant.now(), 0L, 0L, 1L, 0L);
+            mockAggregateQuery(List.of(tuple));
+            mockCountQuery(1L);
+            mockBooksQuery(List.of(buildBook(31L, "Abandoned Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, null);
+
+            assertEquals("ABANDONED", result.getContent().getFirst().getSeriesStatus());
+        }
+
+        @Test
+        void getSeries_seriesStatus_reading_whenReadingCountPositive() {
+            mockAdminUser();
+            Tuple tuple = mockSeriesTupleWithCounts("Reading Series", 4L, 4, Instant.now(), 0L, 1L, 0L, 0L);
+            mockAggregateQuery(List.of(tuple));
+            mockCountQuery(1L);
+            mockBooksQuery(List.of(buildBook(32L, "Reading Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, null);
+
+            assertEquals("READING", result.getContent().getFirst().getSeriesStatus());
+        }
+
+        @Test
+        void getSeries_seriesStatus_unread_whenAllCountsAreNull() {
+            mockAdminUser();
+            Tuple tuple = mock(Tuple.class);
+            when(tuple.get(0, String.class)).thenReturn("Unread Series");
+            when(tuple.get(1, Long.class)).thenReturn(4L);
+            when(tuple.get(2, Integer.class)).thenReturn(4);
+            when(tuple.get(3, Instant.class)).thenReturn(Instant.now());
+            when(tuple.get(4, Long.class)).thenReturn(null);
+            when(tuple.get(5, Instant.class)).thenReturn(null);
+            when(tuple.get(6, Long.class)).thenReturn(null);
+            when(tuple.get(7, Long.class)).thenReturn(null);
+            when(tuple.get(8, Long.class)).thenReturn(null);
+            mockAggregateQuery(List.of(tuple));
+            mockCountQuery(1L);
+            mockBooksQuery(List.of(buildBook(33L, "Unread Series", 1.0f, "Author A")));
+
+            AppPageResponse<AppSeriesSummary> result = service.getSeries(0, 20, null, null, null, null, null);
+
+            assertEquals("UNREAD", result.getContent().getFirst().getSeriesStatus());
+            assertEquals(0, result.getContent().getFirst().getBooksRead());
+        }
+
+        @Test
+        void getSeries_nonAdmin_nullAssignedLibraries_treatedAsNoAccess() {
+            var permissions = new BookLoreUser.UserPermissions();
+            permissions.setAdmin(false);
+            BookLoreUser user = BookLoreUser.builder()
+                    .id(userId)
+                    .permissions(permissions)
+                    .assignedLibraries(null)
+                    .build();
+            when(authenticationService.getAuthenticatedUser()).thenReturn(user);
+
+            assertThrows(APIException.class, () ->
+                    service.getSeries(0, 20, null, null, 5L, null, null));
+        }
+
+        @Test
+        void getSeries_nonAdmin_emptyAssignedLibraries_throwsForbidden() {
+            mockNonAdminUser(Collections.emptySet());
+
+            assertThrows(APIException.class, () ->
+                    service.getSeries(0, 20, null, null, 5L, null, null));
         }
     }
 
@@ -267,32 +409,13 @@ class AppSeriesServiceTest {
             assertEquals(0, result.getTotalElements());
         }
 
-        @Test
-        void getSeriesBooks_sortByTitle_desc() {
+        @ParameterizedTest(name = "getSeriesBooks sort by {0} {1}")
+        @CsvSource(value = {"title,desc", "recentlyAdded,asc", "null,null"}, nullValues = "null")
+        void getSeriesBooks_sortedByField(String sortField, String sortDir) {
             mockAdminUser();
             mockBookPage(Collections.emptyList(), 0L);
 
-            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, "title", "desc", null);
-
-            assertNotNull(result);
-        }
-
-        @Test
-        void getSeriesBooks_sortByRecentlyAdded_asc() {
-            mockAdminUser();
-            mockBookPage(Collections.emptyList(), 0L);
-
-            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, "recentlyAdded", "asc", null);
-
-            assertNotNull(result);
-        }
-
-        @Test
-        void getSeriesBooks_defaultSort_isSeriesNumber() {
-            mockAdminUser();
-            mockBookPage(Collections.emptyList(), 0L);
-
-            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, null, null, null);
+            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, sortField, sortDir, null);
 
             assertNotNull(result);
         }
@@ -316,6 +439,38 @@ class AppSeriesServiceTest {
             AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 200, null, null, null);
 
             assertEquals(50, result.getSize());
+        }
+
+        @Test
+        void getSeriesBooks_nonAdmin_withoutSpecificLibraryId_restrictsToAllAccessibleLibraries() {
+            mockNonAdminUser(Set.of(5L, 6L));
+            mockBookPage(Collections.emptyList(), 0L);
+
+            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, null, null, null);
+
+            assertNotNull(result);
+            verify(bookRepository).findAll(any(Specification.class), any(Pageable.class));
+        }
+
+        @Test
+        void getSeriesBooks_admin_withSpecificLibraryId_restrictsToThatLibrary() {
+            mockAdminUser();
+            mockBookPage(Collections.emptyList(), 0L);
+
+            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, null, null, 5L);
+
+            assertNotNull(result);
+            verify(bookRepository).findAll(any(Specification.class), any(Pageable.class));
+        }
+
+        @Test
+        void getSeriesBooks_sortBySeriesNumber_explicit() {
+            mockAdminUser();
+            mockBookPage(Collections.emptyList(), 0L);
+
+            AppPageResponse<AppBookSummary> result = service.getSeriesBooks("Dune", 0, 20, "seriesNumber", "asc", null);
+
+            assertNotNull(result);
         }
     }
 
@@ -362,6 +517,15 @@ class AppSeriesServiceTest {
     private Tuple mockSeriesTupleInProgress(String name, Long count, Integer total, Instant addedOn, Long booksRead, Instant lastReadTime) {
         Tuple tuple = mockSeriesTuple(name, count, total, addedOn, booksRead);
         when(tuple.get(5, Instant.class)).thenReturn(lastReadTime);
+        return tuple;
+    }
+
+    private Tuple mockSeriesTupleWithCounts(String name, Long count, Integer total, Instant addedOn, Long booksRead,
+                                             Long readingCount, Long abandonedCount, Long wontReadCount) {
+        Tuple tuple = mockSeriesTuple(name, count, total, addedOn, booksRead);
+        when(tuple.get(6, Long.class)).thenReturn(readingCount);
+        when(tuple.get(7, Long.class)).thenReturn(abandonedCount);
+        when(tuple.get(8, Long.class)).thenReturn(wontReadCount);
         return tuple;
     }
 
